Replace adjustment of previous visual rects on scroll with normal paint invalidation

Previously the adjustment of previous visual rects on scroll was not
complete: it ignored non-layered objects, and didn't adjust location
in backing.

Now set paint invalidation flag on scroll if needed, and all required
adjustments will be done during paint invalidation.

BUG=673197
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2605543002
Cr-Commit-Position: refs/heads/master@{#440763}

Former-commit-id: 03444642622ffcecb8197bf40d6a21495d694240